--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -69,6 +69,9 @@
     padding: 20px;
     text-align: center;
 }
+a.logo img {
+  max-width: 70px;
+}
 }
 @media (max-width: 575px) {
   .footer_left ul li {
