--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,3 +333,66 @@ a.logo img {
 .home_page_banner img {
   height: 600px;
 }
+
+
+
+/****cookies*****/
+.cookie-alert {
+  align-items: baseline;
+  background: rgb(0, 0, 0);
+  color: white;
+  left: auto;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  bottom: 0px;
+  display: none;
+}
+
+.cookie-alert.show {
+  display: block;
+  transform: translateY(0%);
+  transition-delay: 1000ms;
+}
+
+.cookie-alert .card-body {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 3rem;
+}
+
+.cookie-content {
+  width: 85%;
+  padding-right: 10px;
+}
+
+.accept-btn {
+  width: 15%;
+}
+
+.accept-cookies {
+  display: block;
+  text-align: center;
+}
+
+.cookie-content p {
+  margin: 0;
+  padding-right: 10px;
+}
+
+.resort_list {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  text-align: center;
+  border-radius: 10px
+}
+.common_padding {
+  padding: 30px 0;
+}
+.rating_section {
+  border-left: 1px solid #c19d68;
+  border-right: 1px solid #c19d68;
+}
+.image_resort_list a img {
+  border-radius: 10px 0px 0px 10px;
+}
