--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,30 @@
+@media screen and (max-width:1024px) {
+  .cookie-content {
+    width: 100%;
+    padding-right: 10px;
+    text-align: center;
+  }
+
+  .accept-btn {
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .cookie-content p {
+    font-size: 14px;
+  }
+
+  .cookie-alert .card-body {
+    padding: 20px 10px;
+  }
+
+  .accept-btn a {
+    max-width: 150px;
+    width: 100%;
+    margin: auto !important;
+  }
+}
 @media (max-width: 991px) {
   .nav {
     padding: 1rem;
@@ -66,12 +93,18 @@
 @media (max-width: 767px) 
 {
   .resort_card {
-    padding: 20px;
     text-align: center;
 }
 a.logo img {
-  max-width: 70px;
+  max-width: 120px;
 }
+.rating_section {
+  border-top: 1px solid #ee4b2b;
+  border-bottom: 1px solid #ee4b2b;
+  border-left: unset;
+  border-right: unset;
+}
+
 }
 @media (max-width: 575px) {
   .footer_left ul li {
