--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -51,7 +51,7 @@
     display: block;
     width: 25px;
     height: 10px;
-    border-top: 2px solid #0e2c2e;
+    border-top: 2px solid #fff;
     /* filter: invert(1); */
   }
 
@@ -99,8 +99,8 @@ a.logo img {
   max-width: 120px;
 }
 .rating_section {
-  border-top: 1px solid #ee4b2b;
-  border-bottom: 1px solid #ee4b2b;
+  border-top: 1px solid #008080;
+  border-bottom: 1px solid #008080;
   border-left: unset;
   border-right: unset;
 }
