--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ a.common_btn:hover {
 
 .nav>.nav-list>li a {
   text-decoration: none;
-  color: var(--font-color);
+  color: var(--main-color);
   cursor: pointer;
   font-weight: 600;
 }
@@ -153,7 +153,7 @@ header {
 .sub_banner img {
   width: 100%;
   height: 500px;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .sub_banner {
