--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ header {
 .sub_banner img {
   width: 100%;
   height: 500px;
-  /* object-fit: cover; */
+  object-fit: cover;
 }
 
 .sub_banner {
